[package]
name = "river-dreams"
version = "13.0.0"
edition = "2021"

[profile.release]
strip = "symbols"
lto = "fat"
panic = "abort"

[dependencies]
anyhow = "1.0.95"
battery = "0.7.8"
chrono = "0.4.39"
crossterm = "0.28.1"
git2 = "0.19.0"
libc = "0.2.169"
local-ip-address = "0.6.3"
num-format = "0.4.4"
